# privacy-guard

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  LICENSE  README.md  README_DE.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: docker.yml  release.yml
api/: db.py  main.py
api/static/: style.css
api/templates/: _apikeys.html  _history.html  _scan_result.html  _stats.html  app.html  login.html
privacy_guard/: __init__.py  models.py  scanner.py  whitelist.py
privacy_guard/data/: public_figures.txt  secret_rules.toml  street_prepositions.txt  street_suffixes.txt
privacy_guard/detectors/: __init__.py  address.py  base.py  credit_card.py  driver_license.py  email.py  iban.py  kvnr.py  license_plate.py  name.py  personal_id.py  phone.py  secret.py  social_security.py  tax_id.py  url_secret.py  vat_id.py
tests/: test_address.py  test_api.py  test_credit_card.py  test_driver_license.py  test_email.py  test_iban.py  test_kvnr.py  test_license_plate.py  test_name.py  test_personal_id.py  test_phone.py  test_scanner.py  test_secret.py  test_social_security.py  test_tax_id.py  test_url_secret.py  test_vat_id.py  test_whitelist.py
ui/: app.py  db.py
