[project]
name = "privacy-guard"
version = "0.1.0"
description = "DSGVO-konformes Erkennen und Ersetzen von PII in LLM-Prompts"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.8.11",
    "de-core-news-sm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["privacy_guard"]

[tool.hatch.build]
include = [
    "privacy_guard/**",
]

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyright==1.1.408",
    "ruff==0.15.2",
]
