[project]
name = "privacy-guard-scanner"
version = "0.2.0"
description = "DSGVO-konformes Erkennen und Ersetzen von PII in LLM-Prompts"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Adrian Lorenz", email = "github@noa-x.de" },
]
keywords = ["privacy", "pii", "gdpr", "dsgvo", "anonymization", "nlp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Security",
    "Natural Language :: German",
]
dependencies = [
    "spacy>=3.8.11",
]

[project.optional-dependencies]
api = [
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.urls]
Homepage = "https://github.com/noa-x/privacy-guard"
Repository = "https://github.com/noa-x/privacy-guard"
Issues = "https://github.com/noa-x/privacy-guard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["privacy_guard"]

[tool.hatch.build]
include = [
    "privacy_guard/**",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyright==1.1.408",
    "ruff==0.15.2",
    "httpx>=0.27",
    "fastapi>=0.115",
]
